advertise app added

--- a/SOAD/requirements.txt
+++ b/SOAD/requirements.txt
@@ -1,7 +1,20 @@
-django
-django-crispy-forms
-djangorestframework
-stripe
-requests
-pillow
-django-chartjs
+asgiref==3.2.10
+beautifulsoup4==4.9.3
+certifi==2020.11.8
+chardet==3.0.4
+Django==3.1.2
+django-chartjs==2.2.1
+django-crispy-forms==1.9.2
+djangorestframework==3.12.2
+idna==2.10
+mysqlclient==2.0.1
+Pillow==8.0.1
+protobuf==3.13.0
+PyMySQL==0.10.1
+pytz==2020.1
+requests==2.25.0
+six==1.15.0
+soupsieve==2.0.1
+sqlparse==0.4.1
+stripe==2.55.0
+urllib3==1.26.2
