--- a/fitpack/pubspec.yaml
+++ b/fitpack/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http:
+  provider:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,7 +48,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/temp.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
